# travel-planner-fastapi

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
src/: alembic.ini  config.py  database.py  dependencies.py  main.py  middleware.py  pagination.py  security.py  settings.py
src/alembic/: env.py
src/alembic/versions/: 1730eed287c7_create_token_blacklist_table.py  1b5c321d3e3d_create_all_tables.py  344e0e325435_create_place_and_planned_place_tables.py  3e7a63f3c06a_add_field_city_and_country.py  40f1977c449e_create_all_tables.py  5ea60ccd7962_create_user_model_and_social_user_model.py  ce2bf42cab1a_create_user_table.py  e1c4b7c2742a_create_token_blacklist_table.py
src/auth/: constants.py  current_user.py  dependencies.py  exceptions.py  mapper.py  security.py  utils.py
src/auth/repositories/: google_oauth.py  social_account.py  token_blacklist.py  user.py
src/auth/routers/: auth.py  google_auth.py  user.py
src/auth/schemas/: auth.py  auth_schemas.py  google_oauth.py  user.py  user_schemas.py
src/auth/services/: auth.py  encoder.py  google_oauth.py  google_oauth_client.py  google_oauth_url_generator.py  token.py  user.py
src/auth/utils/: cache_utils.py  security_utils.py
src/config/: database.py  logging_config.py
src/db/: database.py  models.py
src/enums/: places.py
src/models/: __init__.py  places.py  social_account.py  token_blacklist.py  users.py
src/places/: constants.py  exceptions.py  utils.py
src/places/repositories/: geo_names.py  openai.py  places.py
src/places/routers/: places.py
src/places/schemas/: description_ai.py  filters.py  openai.py  places.py
src/places/services/: places.py
src/places/utils/: date_utils.py  location_utils.py  prompts.py
src/repositories/: postgres_base.py  user.py
src/routers/: auth.py  user.py
src/schemas/: user.py
src/services/: auth.py  cache.py  user.py
src/tasks/: token_cleanup.py
src/utils/: lifecycle_helpers.py
tests/: conftest.py  utils.py
tests/test_auth/: test_google_oauth.py
tests/test_places/: test_create_places.py  test_get_places.py  test_place.py  test_update_delete_places.py
