[tool.poetry]
name = "travel planner"
version = "0.1.0"
description = ""
authors = ["OleksandrDoronin <oleksandr.doron@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.1"}
uvicorn = {extras = ["standard"], version = "^0.30.3"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
alembic = "^1.13.2"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pyjwt = "^2.8.0"
python-jose = "^3.3.0"
bcrypt = "^4.2.0"
passlib = "^1.7.4"
aiosqlite = "^0.20.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
httpx = "^0.27.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
extend-exclude = [
    "*/__init__.py",
    "env/",
    ".env",
    ".env.*",
    "alembic"
]

lint.ignore = [
    "ANN003",   # ignore mandatory type annotations
    "D105",     # ignore warnings for missing docstrings in magic methods
    "D107",     # ignore warnings for missing docstrings in classes
    "D200",     # single-line docstring requirements
    "D204",     # ignore single-line docstring requirements
]

lint.select = [
    "Q",    # flake8-quotes: checks for consistent quote usage
    "I",    # isort: checks import sorting
    "W",    # pycodestyle warnings: pycodestyle warnings
    "F",    # pyflakes: unused variable and function errors
    "E",    # pycodestyle errors: basic style errors
]

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = false

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.isort]
force-wrap-aliases = true
split-on-trailing-comma = true
lines-after-imports = 2
combine-as-imports = true