[tool.poetry]
name = "travel planner"
version = "0.1.0"
description = ""
authors = ["OleksandrDoronin <oleksandr.doron@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.115.6"}
uvicorn = {extras = ["standard"], version = "^0.33.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
alembic = "^1.14.0"
asyncpg = "^0.30.0"
pyjwt = "^2.10.1"
python-jose = "^3.3.0"
aiosqlite = "^0.20.0"
apscheduler = "^3.11.0"
redis = "^5.2.1"
fastapi-filter = "^2.0.1"
cryptography = "^44.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
httpx = "^0.28.1"
pre-commit = "^4.0.1"
pytest-cov = "^6.0.0"

[tool.pytest.ini_options]
pythonpath = [
    '.', 'src',
]
filterwarnings = [
    "ignore::DeprecationWarning:jose.jwt",
]
asyncio_mode = 'auto'
asyncio_default_fixture_loop_scope = 'function'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
extend-exclude = [
    "*/__init__.py",
    "env/",
    ".env",
    ".env.*",
    "alembic"
]

lint.ignore = [
    "ANN003",   # ignore mandatory type annotations
    "D105",     # ignore warnings for missing docstrings in magic methods
    "D107",     # ignore warnings for missing docstrings in classes
    "D200",     # single-line docstring requirements
    "D204",     # ignore single-line docstring requirements
]

lint.select = [
    "Q",    # flake8-quotes: checks for consistent quote usage
    "I",    # isort: checks import sorting
    "W",    # pycodestyle warnings: pycodestyle warnings
    "F",    # pyflakes: unused variable and function errors
    "E",    # pycodestyle errors: basic style errors
]

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = false

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.isort]
force-wrap-aliases = true
split-on-trailing-comma = true
lines-after-imports = 2
combine-as-imports = true